# zpu

./: .gitignore  Cargo.toml  example.zsm
assembler/: Cargo.toml
assembler/src/: flag.rs  lexer.rs  main.rs  parser.rs  write_file.rs
instruction_decoder/: Cargo.toml
src/: flag.rs  main.rs
stdlib/: Cargo.toml
stdlib/src/: data.rs  lib.rs  opcode.rs  zstring.rs  ztype.rs
