workspace = { members = [ "assembler", "compiler", "stdlib"] }
[package]
name = "zpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.28"
# simple_logger = "5.0.0"
stdlib = { path = "./stdlib" }

[dependencies.simple_logger]
default-features = false
features = ["colors", "threads", "nightly", "stderr"]
version = "5.0.0"
