[package]
name = "stdlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
log = "0.4.28"

[dependencies.simple_logger]
default-features = false
features = ["colors", "threads", "nightly", "stderr"]
version = "5.0.0"

[lib]
name = "stdlib"
# crate-type = ["dylib"]
